--- a/style.css
+++ b/style.css
@@ -1,11 +1,17 @@
 body{
-    background-color:rebeccapurple;
-}
-
-.color{
-    background-color: aqua;
+    background-color: blue;
 }
  .imagen{
      background-size: 20%;
      text-align: center;
  }
+  .size{
+      padding-top: 15%;
+      margin-right: 20%;
+      padding-left: 20%;
+      padding-bottom:15%;
+  }
+  .Portfolioimg {
+    max-height: 60%;
+    max-width: 60%;
+}
