--- a/style.css
+++ b/style.css
@@ -1,61 +1,96 @@
 body {
-	width: 100%;
-	height: 90%;
-	background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-	background-size: 400% 400%;
-	-webkit-animation: Gradient 15s ease infinite;
-	-moz-animation: Gradient 15s ease infinite;
-	animation: Gradient 15s ease infinite;
+  padding: 0%;
+  margin: 0%;
+  width: 100%;
+  height: 90%;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5);
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
 }
 
 @-webkit-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @-moz-keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 @keyframes Gradient {
-	0% {
-		background-position: 0% 50%
-	}
-	50% {
-		background-position: 100% 50%
-	}
-	100% {
-		background-position: 0% 50%
-	}
-}
-
- .imagen{
-     background-size: 20%;
-     text-align: center;
- }
-  .size{
-      padding-top: 15%;
-      margin-right: 20%;
-      padding-left: 20%;
-      padding-bottom:15%;
+  0% {
+    background-position: 0% 50%;
   }
-  .Portfolioimg {
-    max-height: 60%;
-    max-width: 60%;
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
+.imagen {
+  background-size: 20%;
+  text-align: center;
+}
+.size {
+  padding-top: 15%;
+  margin-right: 20%;
+  padding-left: 20%;
+  padding-bottom: 15%;
+}
+.Portfolioimg {
+  max-height: 60%;
+  max-width: 60%;
+}
+
+.aboutme {
+  height: auto;
+}
+.proyectos {
+  height: auto;
+}
+
+.color-purpule {
+  background-color: #660066 !important;
+}
+.text-whitenav {
+  color: azure !important;
+}
+.text-about {
+  padding-top: 30px;
+}
+
+.image-about {
+  border-radius: 50% !important;
+  padding: 46px;
+}
+.card-about {
+  background-color: transparent;
+  border-style: none;
+}
+.text-about {
+  padding-top: 95px;
+  color: white;
+  font-size: 1.3rem;
+}
+.title-about {
+  font-size: 1.5rem;
+}
