--- a/style.css
+++ b/style.css
@@ -89,6 +89,11 @@ body {
   border-style: none;
   padding-top: 24px;
 }
+.card-inicio {
+  background-color: transparent;
+  border-style: none;
+  padding-top: 21px;
+}
 .text-about {
   padding-top: 95px;
   color: white;
@@ -99,6 +104,7 @@ body {
 }
 
 #aboutme {
+  padding-top: 0px;
   margin-top: 9%;
   margin-bottom: 4%;
 }
@@ -128,11 +134,15 @@ body {
 }
 .size-body {
   padding-bottom: 51px;
-  padding-top: 46px;
+  padding-top: 20px;
 }
 .contact-h1 {
   padding-bottom: 23px;
   padding-top: 23px;
+}
+.btn-primary:hover {
+  background-color: #a50aa5;
+  border-color: #a50aa5;
 }
 .contact-container {
   padding-top: 23px;
@@ -140,4 +150,7 @@ body {
 .color-button {
   background-color: #660066;
   border-color: #660066;
+}
+#inicio {
+  padding-top: 43px;
 }
