--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   margin: 0%;
   width: 100%;
   height: 90%;
-  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5);
+  background: linear-gradient(-45deg, #ee7752, #a72c5b, #23a6d5);
   background-size: 400% 400%;
   -webkit-animation: Gradient 15s ease infinite;
   -moz-animation: Gradient 15s ease infinite;
